--- a/casestudies/2/casestudy/www/layout/case_id_2_id_63_pid_0.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_63_pid_0.html
@@ -1,398 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Frontline's "The Last Abortion Clinic": What's Fair in a Video World? | Frontline's "The Last Abortion Clinic": What's Fair in a Video World?
-	- A Journalism Case Study
-
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: #006699;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: #006699;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/2/knightcase_logo.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_2.html" title="Home"><span>Frontline's "The Last Abortion Clinic": What's Fair in a Video World?</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_2_id_63.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_64.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_65.html">Frontline: Brief History</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_66.html">Choosing the Line-up</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_67.html">Raney Aronson</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_68.html">Fairness Policy</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_69.html">Framing the Story</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_70.html">What Price Access?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_71.html">Summer on the Road</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_72.html">Keeping Fairness in Mind</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_73.html">Assembling Material</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_74.html">To Use or Not to Use?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_2_id_75.html">The Rough Cut</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/2/Frontline&#32;Text.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_2.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title"><em>Frontline</em>'s "The Last Abortion Clinic": What's Fair in a Video World?</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><blockquote>
-	<p class="MsoNormal">
-		<strong><span style="color: rgb(20, 69, 148);">This case is FREE.<br />
-		If you decide to teach this case, please send us an email at:&nbsp;</span></strong><span style="font-size: 10pt; font-family: Arial; color: rgb(153, 51, 0);"><a href="mailto:jcaseorders@columbia.edu" title="mailto:jcaseorders@columbia.edu"><strong><span title="mailto:jcaseorders@columbia.edu">jcaseorders@columbia.edu</span></strong></a><strong>&nbsp;</strong></span><strong><span style="color: rgb(20, 69, 148);">with the following information: case title, date of case class, course title, number of students. This allows us to track the usefulness of each case. Thanks.</span></strong></p>
-</blockquote>
-<p>
-	<strong>Abstract</strong></p>
-<p>
-	<i>CSJ-08-0005.0 </i>This case takes students behind the scenes into the making of a news documentary for <em>Frontline</em>, produced at the PBS affiliate in Boston (WGBH). The case tells the story of the making of &ldquo;The Last Abortion Clinic,&rdquo; a 2005 documentary by producer Raney Aronson and her team. The documentary combined a legal story (developments in the abortion debate since <i>Roe v. Wade</i>) with personal stories&mdash;interviews with women in clinics who had confronted the abortion question in their own lives. It focused on the state of Mississippi, which had only one abortion clinic remaining. The case chronicles the evolution of a documentary from idea to finished form. Along the way, it highlights numerous editorial, logistical and ethical decisions Aronson faced in her quest to tell fairly a complex and value-laden story.</p>
-<p>
-	This case features video from the documentary itself. Students are asked to screen and evaluate several film clips in order to determine whether a particular scene belongs in the final film, and if so, where. Students will learn about the respective roles in any <em>Frontline</em> documentary of the executive producer, the executive editor and the production team. They will gain an understanding of what goes into choosing a news documentary topic, selecting those to interview, planning where to film, and deciding which of the hundred hours of tape should be used in the one-hour film. Special attention is paid to the definition of &ldquo;fair&rdquo; in a video context.</p>
-<p>
-	The case study can be used in a class on editorial decision-making, on broadcast media, on documentary film making or on public service broadcasting.</p>
-<div>
-	<em>This case has an Epilogue and a Teaching Note, visible to faculty after they register.</em></div>
-<p>
-	<strong>Credits</strong></p>
-<p>
-	<em>This case was written by Kirsten Lundberg, Director, for the Knight Case Studies Initiative, Graduate School of Journalism, Columbia University. The faculty sponsor was Professor Michael Shapiro. The Columbia Center for New Media Teaching and Learning (CCNMTL) produced the multimedia, online product. Josh Stanley was the project coordinator, and Zarina Mustapha was the website designer. Funding was provided by the </em><i>John S. and James L. Knight Foundation</i><em>.</em></p>
-<div class="footnotesblock">
-	<p>
-		Copyright &copy; 2007 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
-</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; "><strong>For further information, please contact:</strong></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Kirsten Lundberg, Director, Case Consortium @ Columbia</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Tel:857-259-2148; Fax: 212-854-7837</span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); ">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; ">Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153); ">https://casestudies.jrn.columbia.edu</a></span></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size: 12px; "><b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</span></div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_2_id_64_pid_0.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_2_id_15_c_bio.html">Raney&nbsp;Aronson</a></li>
-
-<li class="leaf"><a  href="case_id_2_id_16_c_bio.html">Amy&nbsp;Baxt</a></li>
-
-<li class="leaf"><a  href="case_id_2_id_17_c_bio.html">Seth&nbsp;Bomse</a></li>
-
-<li class="leaf"><a  href="case_id_2_id_18_c_bio.html">David &nbsp;Fanning</a></li>
-
-<li class="leaf"><a  href="case_id_2_id_19_c_bio.html">Louis&nbsp;Wiley</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_2.html
