--- a/casestudies/21/casestudy/www/layout/case_id_21_id_231_pid_0.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_231_pid_0.html
@@ -1,376 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Integrity on Deadline: ABC News and the Duke Lacrosse Photographs | Integrity on Deadline: ABC News and the Duke Lacrosse Photographs
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: #006699;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: #003399;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/21/knightcase_logo.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_21.html" title="Home"><span>Integrity on Deadline: ABC News and the Duke Lacrosse Photographs</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_21_id_231.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_232.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_233.html">ABC News</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_234.html">A Question of Standards</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_235.html">The Particular Challenges of Reporting on Rape</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_236.html">The Duke Incident</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_237.html">ABC Coverage</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_238.html">Enter the ABC </a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_239.html">The DNA Results</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_240.html">The Photos</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_241.html">Scooped</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_21_id_242.html">Smith's Decision</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/21/ABC&#32;News&#32;and&#32;the&#32;Duke&#32;Lacrosse&#32;Photographs_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_21.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Integrity on Deadline: ABC News and the Duke Lacrosse Photographs</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<b>Abstract</b></p>
-<p>
-	<i>CSJ-08-0007.0 </i>This case describes ABC News and its early coverage of an alleged rape by members of the Duke University lacrosse team in 2006. The narrative stops at a point in mid-April when the ABC News Vice President for Editorial Quality, Kerry Smith, had to decide whether or not to broadcast photographs from the party at which the alleged rape took place. NBC News had already scooped ABC with the photos, but only on the East Coast; ABC could still match NBC on the West Coast morning news shows. ABC, however, had a strict policy about identifying a rape victim&mdash;and to publish the photos, even blurred, could be interpreted as &ldquo;naming&rdquo; her. Moreover, the pictures were ambiguous: It was hard to tell whether the alleged victim was smiling or grimacing. Finally, Smith judged the photos &ldquo;tawdry.&rdquo; But the ABC reporting team was anxious to use the photos. Smith had to make the call.</p>
-<p>
-	This case is a useful prism through which to examine the history and complexities of covering sex crimes in the US. It also provides insight into the evolution of Standards and Practices units at television news divisions, as well as the pressures of making nuanced editorial decisions on deadline. Students will be asked to consider what constitutes balanced coverage of a sex crime. In their discussion, they will have to weigh competitive pressures as well as the prevailing cultural norms. Students should begin to develop sensitivity to the most common journalistic errors in covering alleged sex crimes, with a view to avoiding them in the future.</p>
-<p>
-	The case can be used in a course about covering gender and race; about deadline writing; about broadcast news; or on the ethics of journalism.</p>
-<div>
-	<em>This case has an Epilogue and a Teaching Note, visible to faculty after they register.</em></div>
-<p>
-	<b>Credits</b></p>
-<p>
-	<i>This case was written by Rachel Templeton and Pamela Varley for the Knight Case Studies Initiative, Graduate School of Journalism, Columbia University. The faculty sponsor was Professor Michael Shapiro. The Columbia Center for New Media Teaching and Learning (CCNMTL) produced the multimedia, online product. Josh Stanley was the project coordinator, and Zarina Mustapha was the website designer. Funding was provided by the </i><i>John S. and James L. Knight Foundation</i><i>.</i></p>
-<div class="footnotesblock">
-	<p>
-		Copyright &copy; 2007 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Studies Initiative.</p>
-</div>
-<div>
-	<strong>For further information, please contact:</strong></div>
-<div>
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div>
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div>
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu">k</a><a href="mailto:Klundberg@columbia.edu" style="color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/">https://casestudies.jrn.columbia.edu</a></div>
-<div>
-	&nbsp;</div>
-<div>
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_21_id_232_pid_0.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_21_id_56_c_bio.html">Eric&nbsp;Avram</a></li>
-
-<li class="leaf"><a  href="case_id_21_id_57_c_bio.html">Kerry&nbsp;Smith</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_21.html
