--- a/casestudies/85/casestudy/www/layout/case_id_85_id_657_pid_0.html
+++ b/casestudies/85/casestudy/www/layout/case_id_85_id_657_pid_0.html
@@ -1,363 +1,1 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>A Woman's Place? Photojournalist Lynsey Addario in Libya | A Woman's Place? Photojournalist Lynsey Addario in Libya
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
-
-<style>
-#main .title
-{
-	color: ;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
-
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: ;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/85/180-01059A-WomansPlaceBanner.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_85.html" title="Home"><span>A Woman's Place? Photojournalist Lynsey Addario in Libya</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_85_id_657.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_658.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_659.html">Women Covering Conflicts</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_660.html">Path to Photojournalism</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_661.html">Personal Conduct Code</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_662.html">Arab Spring</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_663.html">Into Libya</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_664.html">On the Front Line</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_665.html">In Retreat</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_85_id_666.html">Checkpoint</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/85/Photojournalist&#32;Lynsey&#32;Addario&#32;in&#32;Libya_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_85.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">A Woman's Place? Photojournalist Lynsey Addario in Libya</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-	<strong>ABSTRACT</strong></p>
-<p>
-	<span style="font-size:14px;">CSJ-12-0043.0</span></p>
-<p>
-	<span style="font-size:14px;">This case raises for student consideration the challenges and rewards of covering conflict, especially for women reporters. In March 2011, photojournalist Lynsey Addario was on assignment for the<em> New York Times</em> in Libya. She and three male colleagues had gone to the frontline to cover battles between rebels and government forces. Addario was a veteran of conflict reporting, and had worked in such locations as Gaza, the Democratic Republic of Congo, Afghanistan and Darfur. She had devised and followed policies to keep herself safe. But a sexual attack in Cairo in February on CBS chief foreign correspondent Lara Logan had reminded women reporters of the risks they ran. As the fighting intensified, Addario and her colleagues decided to head for safety. But they did not make it: at a checkpoint, soldiers stopped them, dragged them from the car and held them at gunpoint.</span></p>
-<p>
-	<br />
-	<span style="font-size:14px;">Use this case to ask students whether covering conflict is different for women than it is for men. If so, what are the differences? Once a woman reporter is in the field, what strategies might help mitigate risk? The class can discuss whether the media industry culture helps or hinders women reporters covering conflict. What about the &ldquo;silencing crime&rdquo;&mdash;sexual assault? Discuss how women reporters deal with sexual assault: preventively, in the moment, and after the fact.<br />
-	</span></p>
-<p>
-	<span style="font-size:14px;">Addario and her colleagues are covering what is in effect a civil war, in a culture that treats women differently than men. How much does the culture of the country or region you are assigned to matter? Does training help? What about language skills? Encourage students to imagine themselves in Addario&rsquo;s situation and think through what might have been handled differently, and what to do now.</span></p>
-<p>
-	<br />
-	<span style="font-size:14px;">The case is suitable for classes about reporting in conflict zones; journalism and trauma; international journalism; or race/gender.</span></p>
-<p>
-	<span style="font-size:14px;"><em>This case has an Epilogue and a Teaching Note, visible to faculty after they register.</em></span></p>
-<p>
-	<span style="font-size:14px;">Credits:</span></p>
-<p>
-	<em><span style="font-size:14px;">This case was written by Nancy Zerbey for the Case Consortium @ Columbia. The faculty sponsor was Professor Ann Cooper, Graduate School of Journalism. (0312)</span></em></p>
-<p>
-	<em>All photos used in this case are property of Lynsey Addario</em></p>
-<p style="margin-top: 0.5em; margin-bottom: 0.9em; color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<span style="font-size:12px;">Copyright &copy; 2012 The Trustees of Columbia University in the City of New York. No part of this publication may be reproduced, revised, translated, stored in a retrieval system, used in a spreadsheet, or transmitted in any form or by any means (electronic, mechanical, photocopying, recording, or otherwise) without the written permission of the Case Consortium @ Columbia.</span></p>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<strong>For further information, please contact:</strong></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	Kirsten Lundberg, Director, Case Consortium @ Columbia</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	Tel: 857-259-2148; Fax: 212-854-7837</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	Email:&nbsp;<a href="mailto:klundberg@columbia.edu" style="text-decoration: none; color: rgb(51, 102, 153); ">k</a><a href="mailto:Klundberg@columbia.edu" style="text-decoration: none; color: rgb(17, 85, 204); " target="_blank">lundberg@columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	Website:&nbsp;<a href="http://casestudies.jrn.columbia.edu/" style="text-decoration: none; color: rgb(51, 102, 153); ">https://casestudies.jrn.columbia.edu</a></div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	&nbsp;</div>
-<div style="color: rgb(0, 0, 0); font-family: arial, helvetica, verdana, sans-serif; font-size: 14px; line-height: 19px; ">
-	<b>Send written inquiries to:</b><br />
-	Case Consortium @ Columbia<br />
-	2950 Broadway, MC 3812<br />
-	New York, NY 10027</div>
-</div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_85_id_658_pid_0.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_85_id_184_c_bio.html">Lynsey&nbsp;Addario</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-8456305-3");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+./case_id_85.html
